Added new textView with my name Andrew Fabbro.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#ff4081</color>
     <color name="dusty_rose">#b530bd</color>
     <color name="orange">#E3480B</color>
-    <color name="bright_blue">#0BE3DF</color>
+    <color name="bright_blue">#0be3df</color>
 </resources>
