--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -111,4 +111,15 @@
         android:layout_toEndOf="@+id/button2"
         android:textColor="@color/bright_blue"
         android:textIsSelectable="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Paul Regan"
+        android:id="@+id/textView6"
+        android:layout_alignTop="@+id/textView3"
+        android:layout_alignRight="@+id/textView5"
+        android:layout_alignEnd="@+id/textView5"
+        android:textColor="@color/bright_blue" />
 </RelativeLayout>
